p2/conf/app3.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: app-three

spec:
  replicas: 3
  selector:
    matchLabels:
      app: app3
  
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app-three
          image: hashicorp/http-echo
          args:
            - "-text=hello from app3"

---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 5678
#http echo default listening port
