p2/conf/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
  - name: gateway-traefik
    protocol: HTTP
    port: 80
    hostname: "*.local"
