p2/conf/app1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-one
  namespace: default
spec:
  parentRefs:
    - name: gateway-traefik
  hostnames:
    - "app1.local"
